mType/tests/testFiles/error/error/syntaxUnmatchedParentheses.mt
function test(): int {
    return (10 + 20;
}